--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,4 +36,11 @@
         <item name="android:textColor" >#00000000</item>
     </style>
 
+    <style name="title_text">
+        <!--<item name="android:textColor">@android:color/black</item>-->
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">5dp</item>
+    </style>
+
 </resources>
