--- a/app/src/main/res/drawable/textview_border.xml
+++ b/app/src/main/res/drawable/textview_border.xml
@@ -3,5 +3,5 @@
     android:shape="rectangle">
     <stroke
         android:width="1dip"
-        android:color="@android:color/holo_red_light" />
+        android:color="@android:color/black" />
 </shape>
