--- a/app/src/main/res/layout/activity_moviedetail.xml
+++ b/app/src/main/res/layout/activity_moviedetail.xml
@@ -87,6 +87,73 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/ll_ratings"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/textview_border"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="10dp">
+
+                <LinearLayout
+                    android:id="@+id/ll_tmdb_rating"
+                    android:layout_width="wrap_content"
+                    android:layout_height="80dp"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="6"
+                        android:src="@drawable/tmdb_logo" />
+
+                    <TextView
+                        android:id="@+id/tv_tmdb_rating"
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="2"
+                        tools:text="8.3" />
+
+                    <TextView
+                        android:id="@+id/tv_tmdb_rating_count"
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="2"
+                        tools:text="21103votes" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/ll_trakt_rating"
+                    android:layout_width="wrap_content"
+                    android:layout_height="80dp"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="6"
+                        android:src="@drawable/trakt_logo" />
+
+                    <TextView
+                        android:id="@+id/tv_trakt_rating"
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="2"
+                        tools:text="8.3" />
+
+                    <TextView
+                        android:id="@+id/tv_trakt_rating_count"
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="2"
+                        tools:text="21103votes" />
+                </LinearLayout>
+            </LinearLayout>
+
             <TextView
                 style="@style/detail_title"
                 android:layout_alignParentLeft="true"
