--- a/app/src/main/res/layout/activity_staff_detail.xml
+++ b/app/src/main/res/layout/activity_staff_detail.xml
@@ -37,6 +37,14 @@
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.7"
                 app:layout_scrollFlags="scroll|enterAlwaysCollapsed" />
+            <!--<com.floatingmuseum.mocloud.widgets.TopCropImageView-->
+                <!--android:id="@+id/staff_avatar"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="240dp"-->
+                <!--android:fitsSystemWindows="true"-->
+                <!--app:layout_collapseMode="parallax"-->
+                <!--app:layout_collapseParallaxMultiplier="0.7"-->
+                <!--app:layout_scrollFlags="scroll|enterAlwaysCollapsed"/>-->
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
