--- a/app/src/main/res/layout/item_staff_works.xml
+++ b/app/src/main/res/layout/item_staff_works.xml
@@ -29,12 +29,7 @@
     </RelativeLayout>
 
     <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:clickable="true"
-        android:foreground="?android:attr/selectableItemBackground"
-        app:cardElevation="4dp">
+        style="@style/card_style">
 
         <LinearLayout
             android:layout_width="match_parent"
