--- a/app/src/main/res/layout/activity_single_comment.xml
+++ b/app/src/main/res/layout/activity_single_comment.xml
@@ -6,9 +6,9 @@
 
     <include layout="@layout/layout_appbar" />
 
-    <include
-        android:id="@+id/main_comment"
-        layout="@layout/comment_item" />
+    <!--<include-->
+        <!--android:id="@+id/main_comment"-->
+        <!--layout="@layout/comment_item" />-->
 
     <RelativeLayout
         android:layout_width="match_parent"
