--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -75,11 +75,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="20dp"
                     android:layout_marginTop="6dp"
-                    android:layout_toLeftOf="@+id/tv_comments_likes"
+                    android:layout_toLeftOf="@+id/tv_comment_likes"
                     android:src="@drawable/appreciate" />
 
                 <TextView
-                    android:id="@+id/tv_comments_likes"
+                    android:id="@+id/tv_comment_likes"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="6dp"
