--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -39,6 +39,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="1"
+                    android:textColor="@color/comment_user"
                     android:gravity="center_vertical"
                     tools:text="Serggyo Alejandro" />
 
