--- a/app/src/main/res/layout/activity_moviedetail.xml
+++ b/app/src/main/res/layout/activity_moviedetail.xml
@@ -11,7 +11,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="10dp">
+        android:padding="3dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -28,7 +28,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    mocloud:image_ratio="1.42" />
+                    mocloud:image_ratio="1.42"
+                    tools:src="@drawable/default_movie_poster" />
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -93,7 +94,7 @@
                 android:id="@+id/ll_ratings"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="3dp"
                 android:background="@drawable/textview_border"
                 android:gravity="center"
                 android:orientation="horizontal"
