--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,4 +23,6 @@
     <color name="main_movie_item_title">#FFFFFF</color>
     <color name="comment_owner">#000000</color>
     <color name="comment_user">#737373</color>
+    <color name="review_tip_bg">#999999</color>
+    <color name="text_updatetime">#999999</color>
 </resources>
