add round corner bg of comment tip

--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -68,7 +68,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_marginLeft="5dp"
-                        android:background="@color/spoiler_red"
+                        android:background="@drawable/spoiler_round_corner_bg"
                         android:gravity="center_vertical"
                         android:padding="2dp"
                         android:text="@string/spoiler_alert"
@@ -84,7 +84,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_marginLeft="5dp"
-                        android:background="@color/review_tip_bg"
+                        android:background="@drawable/review_round_corner_bg"
                         android:gravity="center_vertical"
                         android:padding="2dp"
                         android:text="@string/review_tip"
