--- a/app/src/main/res/layout/activity_moviedetail.xml
+++ b/app/src/main/res/layout/activity_moviedetail.xml
@@ -9,11 +9,13 @@
     <include layout="@layout/layout_appbar" />
 
     <ScrollView
+        android:id="@+id/sv_movie_detail"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="3dp">
 
         <LinearLayout
+            android:id="@+id/ll_movie_detail"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
@@ -177,26 +179,26 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:weightSum="4"></LinearLayout>
+                android:weightSum="4"/>
 
             <TextView
                 style="@style/detail_title"
                 android:text="@string/comments" />
 
-            <TextView
-                android:id="@+id/tv_no_comments"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:gravity="center"
-                android:text="There is no comments,add one?"
-                android:textColor="@color/detail_content"
-                android:visibility="gone" />
-
             <LinearLayout
                 android:id="@+id/ll_comments"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"></LinearLayout>
+                android:orientation="vertical"/>
+
+            <TextView
+                android:id="@+id/tv_no_more_comments"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:gravity="center"
+                android:text="There is no more comments,add one?"
+                android:textColor="@color/detail_content"
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/tv_comments_more"
