add rating on each comment item

--- a/app/src/main/res/layout/item_movie_trending.xml
+++ b/app/src/main/res/layout/item_movie_trending.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:mocloud="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="1dp">
@@ -10,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scaleType="fitXY"
-        mocloud:image_ratio="1.42" />
+        mocloud:image_ratio="1.42"
+        tools:src="@drawable/default_movie_poster" />
 
     <TextView
         android:id="@+id/tv_title"
