--- a/app/src/main/res/layout/activity_staff_detail.xml
+++ b/app/src/main/res/layout/activity_staff_detail.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:mocloud="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -29,22 +29,25 @@
             <!--enterAlwaysCollapsed: 顾名思义，这个flag定义的是何时进入（已经消失之后何时再次显示）。假设你定义了一个最小高度（minHeight）同时enterAlways也定义了，那么view将在到达这个最小高度的时候开始显示，并且从这个时候开始慢慢展开，当滚动到顶部的时候展开完。-->
             <!--exitUntilCollapsed: 同样顾名思义，这个flag时定义何时退出，当你定义了一个minHeight，这个view将在滚动到达这个最小高度的时候消失。-->
 
-            <ImageView
+            <com.floatingmuseum.mocloud.widgets.RatioImageView
                 android:id="@+id/staff_avatar"
-                android:layout_width="match_parent"
-                android:layout_height="240dp"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:fitsSystemWindows="true"
+                app:image_ratio="1.42"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.7"
-                app:layout_scrollFlags="scroll|enterAlwaysCollapsed" />
+                app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
+                tools:src="@drawable/default_movie_poster" />
             <!--<com.floatingmuseum.mocloud.widgets.TopCropImageView-->
-                <!--android:id="@+id/staff_avatar"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="240dp"-->
-                <!--android:fitsSystemWindows="true"-->
-                <!--app:layout_collapseMode="parallax"-->
-                <!--app:layout_collapseParallaxMultiplier="0.7"-->
-                <!--app:layout_scrollFlags="scroll|enterAlwaysCollapsed"/>-->
+            <!--android:id="@+id/staff_avatar"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="240dp"-->
+            <!--android:fitsSystemWindows="true"-->
+            <!--app:layout_collapseMode="parallax"-->
+            <!--app:layout_collapseParallaxMultiplier="0.7"-->
+            <!--app:layout_scrollFlags="scroll|enterAlwaysCollapsed"/>-->
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
