--- a/app/src/main/res/layout/fragment_movie_trending.xml
+++ b/app/src/main/res/layout/fragment_movie_trending.xml
@@ -8,7 +8,6 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/widgets_background"></android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent"/>
 
 </android.support.v4.widget.SwipeRefreshLayout>
