--- a/app/src/main/res/layout/activity_lists.xml
+++ b/app/src/main/res/layout/activity_lists.xml
@@ -5,8 +5,5 @@
     android:orientation="vertical">
 
     <include layout="@layout/layout_appbar"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="will i leaked" />
+    <include layout="@layout/layout_under_construction" />
 </LinearLayout>
