change ListsActivity to RecommendationsActivity

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,9 +8,9 @@
             android:title="My" />
 
         <item
-            android:id="@+id/nav_lists"
-            android:icon="@drawable/drawer_list_black_48dp"
-            android:title="Lists" />
+            android:id="@+id/nav_recommendations"
+            android:icon="@drawable/drawer_recommendations_black_48dp"
+            android:title="Recommendations" />
 
         <item
             android:id="@+id/nav_calendar"
