--- a/app/src/main/res/layout/activity_staff_detail.xml
+++ b/app/src/main/res/layout/activity_staff_detail.xml
@@ -17,29 +17,46 @@
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="240dp"
-            android:background="?attr/colorPrimary"
             android:fitsSystemWindows="true"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            android:background="?attr/colorPrimary"
             app:contentScrim="@color/colorPrimary"
             app:expandedTitleTextAppearance="@style/transparentText"
             app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+
+
             <!--scroll: 所有想滚动出屏幕的view都需要设置这个flag，没有设置这个flag的view将被固定在屏幕顶部。-->
             <!--enterAlways: 这个flag让任意向下的滚动都会导致该view变为可见，当向上滑的时候Toolbar就隐藏，下滑的时候显示。-->
             <!--enterAlwaysCollapsed: 顾名思义，这个flag定义的是何时进入（已经消失之后何时再次显示）。假设你定义了一个最小高度（minHeight）同时enterAlways也定义了，那么view将在到达这个最小高度的时候开始显示，并且从这个时候开始慢慢展开，当滚动到顶部的时候展开完。-->
             <!--exitUntilCollapsed: 同样顾名思义，这个flag时定义何时退出，当你定义了一个minHeight，这个view将在滚动到达这个最小高度的时候消失。-->
 
-            <com.floatingmuseum.mocloud.widgets.RatioImageView
+
+            <!--<com.floatingmuseum.mocloud.widgets.RatioImageView-->
+            <!--android:id="@+id/staff_avatar"-->
+            <!--android:layout_width="100dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="center"-->
+            <!--android:fitsSystemWindows="true"-->
+            <!--app:image_ratio="1.42"-->
+            <!--app:layout_collapseMode="parallax"-->
+            <!--app:layout_collapseParallaxMultiplier="0.7"-->
+            <!--app:layout_scrollFlags="scroll|enterAlwaysCollapsed"-->
+            <!--tools:src="@drawable/default_movie_poster" />-->
+
+            <ImageView
                 android:id="@+id/staff_avatar"
-                android:layout_width="180dp"
-                android:layout_height="wrap_content"
+                android:layout_width="140dp"
+                android:layout_height="198dp"
                 android:layout_gravity="center"
                 android:fitsSystemWindows="true"
-                app:image_ratio="1.42"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.7"
                 app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
                 tools:src="@drawable/default_movie_poster" />
+
+
             <!--<com.floatingmuseum.mocloud.widgets.TopCropImageView-->
             <!--android:id="@+id/staff_avatar"-->
             <!--android:layout_width="match_parent"-->
@@ -61,6 +78,7 @@
             android:id="@+id/staff_detail_tab"
             android:layout_width="match_parent"
             android:layout_height="40dp"
+            android:background="@android:color/transparent"
             app:tabMode="fixed" />
     </android.support.design.widget.AppBarLayout>
 
