pass color swatch from MovieDetailActivity to SingleCommentActivity

--- a/app/src/main/res/layout/activity_single_comment.xml
+++ b/app/src/main/res/layout/activity_single_comment.xml
@@ -11,6 +11,7 @@
         <!--layout="@layout/comment_item" />-->
 
     <RelativeLayout
+        android:id="@+id/rl_comment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
